# obs-headless

./: .env.dist  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  ObsWorker.cpp  ObsWorker.hpp  README.md  STREAMING.md  compile.sh  config.sh  config.txt  docker-compose.yaml  docker.sh  main.cpp  obs-headless-base.Dockerfile  obs-headless-builder.Dockerfile  obs-headless-dev.Dockerfile  obs-headless.Dockerfile  run.sh  run_server.sh  trace.h
.github/: FUNDING.yml
etc/: bashrc  config.txt  docker-entrypoint.sh
etc/shows/: bigshow.json  default.json  rtmp.json
src/: CMakeLists.txt  ObsWorker.cpp  ObsWorker.hpp  Scene.cpp  Scene.hpp  Settings.cpp  Settings.hpp  Show.cpp  Show.hpp  Source.cpp  Source.hpp  Status.hpp  Studio.cpp  Studio.hpp  Trace.hpp  client.cpp  main.cpp  server.cpp
src/lib/: Scene.cpp  Scene.hpp  Settings.cpp  Show.cpp  Show.hpp  Source.cpp  Source.hpp  Studio.cpp  Trace.hpp
src/lib/proto/: studio.grpc.pb.cc  studio.grpc.pb.h  studio.pb.cc  studio.pb.h
src/proto/: studio.grpc.pb.h
src/proto_gen/: proto_gen.sh  studio.proto
